Fix(layout): Fixed layout issues for feature__title not centered, testimonials and footer not taking full body width

--- a/components/_features.scss
+++ b/components/_features.scss
@@ -10,6 +10,13 @@
   align-items: flex-start;
 }
 
+.item__title {
+  display: inline-block;
+  color: var(--color-dark-blue);
+  font-weight: var(--font-weight-bold);
+  padding-top: 0.7rem;
+}
+
 .item__description {
   margin-top: 2rem;
 }
@@ -20,10 +27,4 @@
   background-color: var(--color-bright-red);
   padding: 0.8rem 2.3rem;
   border-radius: 2rem;
-}
-
-.item__title {
-  display: inline-block;
-  color: var(--color-dark-blue);
-  font-weight: var(--font-weight-bold);
 }
