--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  min-width: 100vw;
+  width: 100%;
   justify-self: center;
 }
 
