--- a/components/_global.scss
+++ b/components/_global.scss
@@ -16,6 +16,7 @@ body {
   row-gap: 14rem;
   max-width: 144rem;
   margin: 0 auto;
+  padding: 0 2rem;
 }
 
 .getStarted:link,
@@ -27,6 +28,7 @@ body {
   padding: 1.1rem 3rem;
   transition: var(--transition-timing);
   box-shadow: 0 0 0.3rem var(--color-pale-red);
+  margin-inline-end: 1.8rem;
 }
 
 .getStarted:hover,
@@ -51,18 +53,18 @@ body {
 .top-bg-img {
   display: block;
   position: absolute;
-  top: -15rem;
-  right: -18.5rem;
-  max-width: 56.5%;
+  top: -27rem;
+  right: -16.5rem;
+  width: 53.5%;
   height: auto;
   z-index: -1;
 }
 
 .lower-bg-img {
   position: absolute;
-  top: 107rem;
-  left: -42rem;
-  width: 45%;
+  top: 117rem;
+  left: -46rem;
+  width: 41%;
   height: auto;
   z-index: -1;
 }
