--- a/components/_intro.scss
+++ b/components/_intro.scss
@@ -17,5 +17,4 @@
   justify-self: flex-end;
   width: 100%;
   height: auto;
-  margin-inline-end: -1.9rem;
 }
