--- a/components/_testimonials.scss
+++ b/components/_testimonials.scss
@@ -1,6 +1,8 @@
 .testimonials {
+  width: 100%;
   display: grid;
   row-gap: 4rem;
+  margin: 14rem 0;
 }
 
 .testimonials__header {
